Fixed mobile header spacing and added back titles

--- a/resources/css/sass/pages/_add-match.scss
+++ b/resources/css/sass/pages/_add-match.scss
@@ -544,6 +544,11 @@
       h1 {
         font-size: 27px;
         display: none;
+
+        &.show-mobile{
+          display: inline-block;
+          width: 100%;
+        }
         &.add{
           display: inline;
           font-size: 27px;
