--- a/resources/css/sass/pages/_matches.scss
+++ b/resources/css/sass/pages/_matches.scss
@@ -249,7 +249,7 @@ $border-color-dark: #e2e0e1;
     margin-bottom: 250px;
     padding-top: 0px !important;
     &.home{
-      padding-top: 23px !important;
+      padding-top: 50px !important;
     }
     .message{
       font-size: 20px;
