--- a/resources/css/sass/pages/_ranklist.scss
+++ b/resources/css/sass/pages/_ranklist.scss
@@ -231,7 +231,7 @@
     max-width: 100%;
     overflow: hidden;
     margin-bottom: 250px;
-    padding-top: 23px !important;
+    padding-top: 50px !important;
 
     .ranking-entry {
       display: flex !important;
